--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ absl-py==2.1.0
 aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
 aiosignal==1.3.1
+altair==5.5.0
 appnope==0.1.4
 asttokens==2.4.1
 attrs==24.2.0
@@ -23,6 +24,8 @@ ipykernel==6.29.5
 ipython==8.29.0
 jedi==0.19.1
 Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 lightning-utilities==0.11.8
@@ -32,6 +35,7 @@ matplotlib-inline==0.1.7
 mpmath==1.3.0
 multidict==6.1.0
 multiprocess==0.70.16
+narwhals==1.14.2
 nest-asyncio==1.6.0
 networkx==3.4.2
 numpy==1.26.4
@@ -53,7 +57,9 @@ python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
 pyzmq==26.2.0
+referencing==0.35.1
 requests==2.32.3
+rpds-py==0.21.0
 setuptools==70.2.0
 six==1.16.0
 stack-data==0.6.3
